<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/backgroundColor"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16dp">

            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:adjustViewBounds="true"
                android:src="@drawable/map" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/office"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="48dp"
                    android:layout_height="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/underLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_work_black_24dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/time"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_place_black_24dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/address"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_phone_black_24dp" />

                    <TextView
                        android:autoLink="phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/phone"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:autoLink="email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/email"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_language_black_24dp" />

                    <TextView
                        android:autoLink="web"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_16dp"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/website"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
